--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1> 
-    <a href="./recipes/peanut_butter_fudge_brownies.html">Peanut Butter Fudge Brownies</a>  
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/peanut_butter_fudge_brownies.html">Peanut Butter Fudge Brownies</a> </li>
+        <li><a href="./recipes/creamy-tuscan-chicken-pasta.html">Creamy Tuscan Chicken Pasta</a></li>
+        <li></li>
+    </ul> 
+     
 </body>
 </html>
