add new page egg white oatmeal
add img oatmeal, small edits

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/peanut_butter_fudge_brownies.html">Peanut Butter Fudge Brownies</a> </li>
         <li><a href="./recipes/creamy-tuscan-chicken-pasta.html">Creamy Tuscan Chicken Pasta</a></li>
-        <li></li>
+        <li><a href="./recipes/eggwhite-oatmeal.html">High Protein Egg white Oatmeal</a></li>
     </ul> 
      
 </body>
