--- a/recipes/creamy-tuscan-chicken-pasta.html
+++ b/recipes/creamy-tuscan-chicken-pasta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peanut Butter Fudge Brownies</title>
+    <title>Creamy Tuscan Chicken Pasta</title>
 </head>
 
 <body>
